Fixed css import relative pathing and researched into the problem where chrome showed the body tag only covered the view height

--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -1,10 +1,10 @@
-@import "../../../variables.scss";
+@import "variables.scss";
 
 $button-border-right: 5px;
 
 :host {
-    width: 100%;
     height: $nav-bar-height;
+    width: 100%;
     background: $color-background-main;
 
     .nav-bar {
