--- a/src/app/modules/projects/containers/projects-container/projects-container.component.scss
+++ b/src/app/modules/projects/containers/projects-container/projects-container.component.scss
@@ -1,5 +1,3 @@
-:host {
-    h1 {
-        text-align: center;
-    }
+h1 {
+    text-align: center;
 }
